--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="top-container">
-    <img src="/images/MUHAMMAD SHOAIB.png" alt="logo" srcset="" class="logo">
+    <img src="images/MUHAMMAD SHOAIB.png" alt="logo" srcset="" class="logo">
     <img class="top-cloud" src="images/cloud.png" alt="cloud">
     <div class="title-text">
       <h1>I'm Muhammad Shoaib.</h1>
